[package]
name = "with-gpu"
version = "0.2.0"
edition = "2021"
authors = ["Oliver Steele <steele@osteele.com>"]
description = "Intelligent GPU selection wrapper for CUDA commands"
license = "MIT"
repository = "https://github.com/osteele/with-gpu"
homepage = "https://github.com/osteele/with-gpu"
keywords = ["gpu", "cuda", "nvidia", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "with-gpu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
nvml-wrapper = "0.10"
